--- a/src/Components/DashboardPage/Sidebar/Sidebar.css
+++ b/src/Components/DashboardPage/Sidebar/Sidebar.css
@@ -26,8 +26,7 @@
   .navbar {
     background: var(--white-color);
     border-bottom: 1px solid var(--border-color);
-    padding-top: 8px;
-    padding-bottom: 8px;
+    margin: 2em;
   }
   
   .navbar .nav-link {
