--- a/src/Components/RegisterPage/register.css
+++ b/src/Components/RegisterPage/register.css
@@ -12,7 +12,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: #eeeeee;
-    flex: 0 0 300px;
+    flex: 0 0 max(250px);
 }
 
 .star {
