--- a/src/Components/WelcomePage/Dashboard/dashboard.css
+++ b/src/Components/WelcomePage/Dashboard/dashboard.css
@@ -1,23 +1,24 @@
 .content-container {
     display: flex;
-    flex: 1 1 auto;
+    flex: 1 0;
+    width: 100dvw;
 }
 
 .bento-main-column {
     margin: 0.5em 0.25em 0em 0.5em;
-    flex: 1 1 400px;
+    flex: 4 1 400px;
     
 }
 
 .bento-side-column {
     margin: 0.5em 0.5em 0em 0.25em;
-    flex: 2 1 max(250px);
+    flex: 1 1 max(200px);
     
 }
 
 .bento-fill-column {
     margin: 0.5em 0.25em 0em 0.25em;
-    flex: 1 1 300px;    
+    flex: 2 1 300px;    
     
 }
 
