--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,8 +12,8 @@
     --secondary-color: #44cfcb;
     --section-bg-color: #eee;
     --primary-bg-color: #a60067;
-    --custom-btn-bg-color: #dc602e;
     --third-bg-color: #ccdde2ff;
+    --custom-btn-bg-color: #dc602e;
     --custom-btn-bg-hover-color: #ccdde2ff;
     --heading-color: #44464c;
     --p-color: #1d3557ff;
@@ -77,7 +77,7 @@ body::-webkit-scrollbar {
 main {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: start;
 }
 
 /*---------------------------------------
@@ -292,8 +292,8 @@ strong {
     border-radius: var(--border-radius-component);
     position: relative;
     overflow: hidden;
+    flex: auto;
     padding: 1em;
-    margin-bottom: 0.3em;
 }
 
 .custom-block h2,
