--- a/src/Components/RegisterPage/register.css
+++ b/src/Components/RegisterPage/register.css
@@ -5,6 +5,10 @@
     margin: 0rem 2rem 1rem 2rem;
     font-size: 16px;
 } */
+.register-content-container {
+    display: flex;
+    width: 100dvw;
+}
 
 .sidebar-container {
     display: flex;
