update home page

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,8 +7,8 @@
 :root {
     --white-color: #ffffff;
     --black-color: #000000;
-    --primary-color: #1678fb;
-    --primary-hover-color: #41a6d1;
+    --primary-color: #41a6d1;
+    --primary-hover-color: #1678fb;
     --secondary-color: #44cfcb;
     --section-bg-color: #eee;
     --primary-bg-color: #a60067;
