--- a/src/Components/HomePage/home.css
+++ b/src/Components/HomePage/home.css
@@ -1,4 +1,5 @@
 .home-container {
+    background: linear-gradient(to bottom, #b3cde0, #6497b1); /* Lighter blue gradient */
     width: stretch;
     display: flex;
     flex-direction: row;
@@ -49,4 +50,29 @@
     background: var(--third-bg-color);
     border-color: transparent;
     color: var(--black-color);
+}
+
+.container {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.centered-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.content-container {
+    text-align: center;
+}
+
+.button-container {
+    display: flex;
+    margin-top: 20px;
+    gap: 1em;
+}
+
+.image-container {
+    width: 50%;
 }
