--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -30,15 +30,15 @@
 }
 
 .button-login:hover {
-    color: var(--primary-color);
+    color: var(--primary-hover-color);
     border-color: transparent;
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--primary-hover-color);
     border-top-left-radius: var(--border-radius-small);
     border-bottom-left-radius: var(--border-radius-small);
 }
 
 .button-register {
-    background: var(--primary-hover-color);
+    background: var(--primary-color);
     color: white;
     font-size: 0.9em;
     padding: 3px 10px;
@@ -56,7 +56,7 @@
 }
 
 .button-register:hover {
-    background: var(--primary-color);
+    background: var(--primary-hover-color);
     color: var(--white-color);
 }
 .header-dropdown-container {
