--- a/src/css/app.css
+++ b/src/css/app.css
@@ -167,7 +167,7 @@ strong {
 -----------------------------------------*/
 .main-wrapper {
     background: var(--section-bg-color);
-    min-height: calc(100vh - 100px);
+    max-height: calc(100dvh - 50px);
     display: flex;
     width: 100dvw;
 }
