--- a/src/css/elements/buttons.css
+++ b/src/css/elements/buttons.css
@@ -5,9 +5,9 @@
 .button-primary {
     background: var(--primary-color);
     color: #fff;
-    font-size: 1em;
-    padding: 6px 10px;
-    border: 1px solid transparent;
+    font-size: auto;
+    padding: 0.3em 0.4em;
+    border: 0.1em solid transparent;
     font-weight: 500;
     cursor: pointer;
     transition: 0.2s;
@@ -25,11 +25,12 @@
 
 .button-secondary {
     color: var(--logo--text-color);
-    font-size: 1em;
-    padding: 6px 10px;
+    font-size: auto;
+    padding: 0.3em 0.8em;
     border: 1px solid var(--logo--text-color);
     font-weight: 500;
     cursor: pointer;
+    width: auto;
     transition: 0.2s;
     margin-bottom: 0em;
     margin-top: 0em;
