--- a/src/css/componets/home.css
+++ b/src/css/componets/home.css
@@ -5,7 +5,7 @@
         #6497b1
     ); /* Lighter blue gradient */
     width: 100dvw;
-    height: 100dvh - 25px;
+    height: calc(100dvh - 80px);
     padding: 0 1em;
     display: flex;
     justify-content: center;
