--- a/src/css/elements/buttons.css
+++ b/src/css/elements/buttons.css
@@ -5,7 +5,7 @@
 .button-primary {
     background: var(--primary-color);
     color: #fff;
-    font-size: auto;
+    font-size: 1.2em;
     padding: 0.3em 0.4em;
     border: 0.1em solid transparent;
     font-weight: 500;
@@ -25,7 +25,7 @@
 
 .button-secondary {
     color: var(--logo--text-color);
-    font-size: auto;
+    font-size: 1.2em;
     padding: 0.3em 0.8em;
     border: 1px solid var(--logo--text-color);
     font-weight: 500;
