--- a/src/css/site.css
+++ b/src/css/site.css
@@ -31,7 +31,7 @@
     font-style: var(--body-font-style);
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 
 main {
@@ -42,7 +42,7 @@ main {
 
 .main-wrapper {
     background: var(--section-bg-color);
-    max-height: calc(100dvh - 50px);
+    max-height: calc(100dvh - 80px);
     display: flex;
     width: 100dvw;
 }
