--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,25 +1,24 @@
 @import url("../fonts/Montserrat.css");
-@import url('./base/reset.css');
-@import url('./responsive.css');
-@import url('./base/topography.css');
-@import url('./elements/buttons.css');
-@import url('./elements/forms.css');
-@import url('./elements/blocks.css');
-@import url('./site-footer.css');
-@import url('./site-header.css');
-@import url('./componets/exchangerate.module.css');
-@import url('./componets/login.css');
-@import url('./componets/register.css');
-@import url('./componets/home.css');
-@import url('./componets/modal.css');
-@import url('./componets/addfriends.css');
-@import url('./componets/overview-tab.css');
-@import url('./componets/profileDetails.css');
-@import url('./componets/upgrade.css');
-@import url('./componets/wallet-tab.css');
-@import url('./componets/settings-tab.css');
-@import url('./componets/sidebar.css');
-
+@import url("./base/reset.css");
+@import url("./responsive.css");
+@import url("./base/topography.css");
+@import url("./elements/buttons.css");
+@import url("./elements/forms.css");
+@import url("./elements/blocks.css");
+@import url("./site-footer.css");
+@import url("./site-header.css");
+@import url("./componets/exchangerate.module.css");
+@import url("./pages/login.css");
+@import url("./pages/register.css");
+@import url("./pages/home.css");
+@import url("./componets/modal.css");
+@import url("./componets/addfriends.css");
+@import url("./pages/overview-tab.css");
+@import url("./pages/profileDetails.css");
+@import url("./componets/upgrade.css");
+@import url("./pages/wallet-tab.css");
+@import url("./pages/settings-tab.css");
+@import url("./componets/sidebar.css");
 
 /*---------------------------------------
   SECTION               
@@ -68,7 +67,7 @@ main {
     background-color: var(--section-bg-color);
     border-radius: var(--border-radius-medium);
     padding: 0.5em 0em;
-    margin: 0.5em; 
+    margin: 0.5em;
     text-align: center;
 }
 
