--- a/src/css/componets/upgrade.css
+++ b/src/css/componets/upgrade.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
+    margin: 0 auto;
     font-family: Arial, sans-serif;
     background-color: var(--section-bg-color);
 }
@@ -11,40 +11,33 @@
     text-align: center;
 }
 .plans {
-    margin-top: 20px;
     display: flex;
-    flex-direction: row; /* Display plans vertically */
-    justify-content: center;
-    align-items: center;
+    margin-top: 2em;
+    gap: 1em;
 }
 
-.bento-cell {
-    margin: 0 10px; /* Add space between plans */
-    
-}
 .plan {
-    margin-bottom: 20px; /* Add space between plans */
-    padding: 20px;
-    border: 1px solid var(--border-color);
-    border-radius: 8px;
+    padding: 2em;
+    border: 0.1em solid var(--border-color);
+    border-radius: 1em;
     background-color: var(--white-color);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.3em 1em rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
     width: 300px; /* Set a fixed width for the plan */
     height: 400px;
 }
 .plan:hover {
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.3em 12px rgba(0, 0, 0, 0.2);
 }
 h1 {
-    margin-bottom: 20px;
+    margin-bottom: 2em;
     color: var(--heading-color);
 }
 button {
-    padding: 10px 20px;
-    margin-top: 10px;
+    padding: 1em 2em;
+    margin-top: 1em;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.3em;
     background-color: var(--custom-btn-bg-color);
     color: var(--white-color);
     cursor: pointer;
