--- a/src/css/elements/buttons.css
+++ b/src/css/elements/buttons.css
@@ -47,10 +47,10 @@
 
 .custom-btn {
     background: var(--custom-btn-bg-color);
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: var(--border-radius-large);
     color: var(--white-color);
-    font-size: var(--btn-font-size);
+    font-size: 1em;
     font-weight: var(--font-weight-bold);
     line-height: normal;
     transition: all 0.3s;
