--- a/src/css/elements/forms.css
+++ b/src/css/elements/forms.css
@@ -1,6 +1,40 @@
+input:not([type="submit"], [type="button"], [type="radio"], [type="checkbox"]) {
+    height: 2em;
+    width: fit-content;
+    padding: 0 0.8em;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    border: 1px solid #ddd;
+    border-radius: var(--border-radius-small);
+    outline: none;
+}
+
+input[type="radio"] {
+    width: 1em;
+    height: 1em;
+    border: 0em;
+    margin: 0;
+}
+
+input[type="checkbox"] {
+    width: 1em;
+    height: 1em;
+}
+
 /*---------------------------------------
   CUSTOM FORM               
 -----------------------------------------*/
+.custom-form {
+    color: var(--p-color);
+    border-radius: var(--border-radius-large);
+    font-size: var(--menu-font-size);
+    font-weight: var(--menu-font-weight);
+    margin-bottom: 2em;
+    padding: 0.4em 1.4em;
+    outline: none;
+    transition: all 0.3s;
+    display: flex;
+}
 
 .form-container {
     background: #fff;
@@ -12,66 +46,24 @@
     margin: 0 auto;
 }
 
-.form-content {
-    padding: 2rem;
-    padding-bottom: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
-
-.form-content input:not(.button-primary) {
-    height: 35px;
-    width: auto;
-    padding: 0 12px;
-    font-size: 14px;
-    margin-bottom: 0.5rem;
-    margin-left: 0rem;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius-small);
-    outline: none;
-}
-
-.form-content label {
-    padding: 0 11px;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
-.custom-form {
-    display: inline-flex; 
-    flex-direction: column;
-    gap: 1em;
-}
-.custom-form .form-content {
-    color: var(--p-color);
-    border-radius: var(--border-radius-large);
-    font-size: var(--menu-font-size);
-    font-weight: var(--menu-font-weight);
-    margin-bottom: 24px;
-    padding: 6px 20px;
-    outline: none;
-    transition: all 0.3s;
-}
-
 .form-container input:hover,
 .form-container input:focus {
     border-color: var(--primary-hover-color);
 }
 
-form input[type="radio"] {
-    width: 1em;
-    height: 1em;
-    border: 0px;
-    margin: 0;
+.form-content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
-form label {
-    font-size: 14px;
+
+
+.form-content label {
+    padding-right: 0.6em;
 }
+
 .form-content header {
     margin-bottom: 2rem;
     align-self: center;
@@ -81,4 +73,10 @@ form label {
     margin-top: 2rem;
     display: flex;
     justify-content: space-between;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
