--- a/src/css/elements/forms.css
+++ b/src/css/elements/forms.css
@@ -28,12 +28,16 @@ form {
 /*---------------------------------------
   CUSTOM FORM               
 -----------------------------------------*/
+.form-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: left;
+}
+
+
 .custom-form {
-    color: var(--p-color);
     border-radius: var(--border-radius-large);
-    font-size: var(--menu-font-size);
-    font-weight: var(--menu-font-weight);
-    margin-bottom: 2em;
     padding: 0.4em 1.4em;
     outline: none;
     transition: all 0.3s;
@@ -44,7 +48,6 @@ form {
     background: #fff;
     border-radius: var(--border-radius-medium);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    max-width: 500px;
     min-width: 500px;
     align-self: center;
     margin: 0 auto;
@@ -62,12 +65,6 @@ form {
     align-items: stretch;
 }
 
-
-
-.form-content label {
-    padding-right: 0.6em;
-}
-
 .form-content header {
     margin-bottom: 2rem;
     align-self: center;
@@ -77,10 +74,6 @@ form {
     margin-top: 2rem;
     display: flex;
     justify-content: space-between;
+    font-size: 1em;
 }
 
-.form-group {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
