--- a/src/css/componets/modal.css
+++ b/src/css/componets/modal.css
@@ -38,7 +38,9 @@
     background-color: var(--secondary-color);
     border: none;
     border-radius: 0.4em;
-    font-size: 1.2em;
+    text-align: center;
+    font-size: 0.8em;
+    height: 1.6em;
     margin: 0;
     padding: 0em 0.5em;
     cursor: pointer;
@@ -77,3 +79,30 @@
 #cancelBtn {
     background-color: crimson;
 }
+
+datalist {
+    position: absolute;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 0 0 5px 5px;
+    border-top: none;
+    font-family: sans-serif;
+    width: 350px;
+    padding: 5px;
+    max-height: 10rem;
+    overflow-y: auto
+    
+  }
+  
+  option {
+    background-color: white;
+    padding: 4px;
+    color: blue;
+    margin-bottom: 1px;
+     font-size: 18px;
+    cursor: pointer;
+  }
+  
+  option:hover,  .active{
+    background-color: lightblue;
+  }
