--- a/src/Components/features/autocomplate.css
+++ b/src/Components/features/autocomplate.css
@@ -1,42 +1,51 @@
 .suggestion-box {
-  border: 1px solid #999;
+  border-bottom: 1px solid var(--border-color);
   padding: 0.5rem;
-  width: 300px;
 }
 
 .no-suggestions {
-  color: #999;
-  padding: 0.5rem;
+  color: var(--border-color);
+  text-align: left;
+  padding-left: 0.8em;
 }
 
 .suggestions {
-  border: 1px solid #999;
+
   border-top-width: 0;
   list-style: none;
   margin-top: 0;
   max-height: 143px;
   overflow-y: auto;
   padding-left: 0;
-  width: calc(300px + 1rem);
+  width: auto;
+}
+
+.suggestions li {
+  text-align: start;
+  padding-left: 0.8em;
+  
 }
 
 .suggestions-wrapper {
   display: flex;
   flex-direction: column;
-}
-
-.suggestions li {
-  padding: 0.5rem;
+  border: 1px solid var(--border-color);
+  /* border-top-style: none; */
+  border-bottom-left-radius: 0.8em;
+  border-bottom-right-radius: 0.8em;
+  border-top-right-radius: 0.8em;
+  border-top-left-radius: 0.8em;
 }
 
 .suggestion-active,
 .suggestions li:hover {
-  background-color: #008f68;
-  color: #fae042;
+  color: var(--primary-color);
   cursor: pointer;
-  font-weight: 700;
+  font-weight: 500;
+  
 }
 
 .suggestions li:not(:last-of-type) {
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid var(--border-color);
+  
 }
