--- a/src/css/site.css
+++ b/src/css/site.css
@@ -5,19 +5,7 @@
 @import url("./elements/forms.css");
 @import url("./elements/blocks.css");
 @import url('./site-layout.css');
+@import url("./responsive.css");  
 
-/* @import url("./site-footer.css");
-@import url("./site-header.css");
-@import url("./componets/exchangerate.module.css");
-@import url("./pages/login.css");
-@import url("./pages/register.css");
-@import url("./pages/home.css");
-@import url("./componets/modal.css");
-@import url("./componets/addfriends.css");
-@import url("./pages/overview-tab.css");
-@import url("./pages/profileDetails.css");
-@import url("./componets/upgrade.css");
-@import url("./pages/wallet-tab.css");
-@import url("./pages/settings-tab.css");
-@import url("./componets/sidebar.css");
-@import url("./responsive.css");  */
+
+/* @import url("./componets/sidebar.css"); */
