--- a/src/Components/pages/Header/site-header.module.css
+++ b/src/Components/pages/Header/site-header.module.css
@@ -1,7 +1,7 @@
 /*---------------------------------------
   HEADER PAGE              
 -----------------------------------------*/
-.header_container {
+.headerContainer {
     display: flex;
     background-color: var(--heading-color);
     flex-direction: row;
@@ -10,7 +10,7 @@
     flex: 0 0 max(45px);
 }
 
-.header_buttons {
+.headerButtons {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -24,7 +24,7 @@
     height: 2.3em;
     cursor: pointer;
 }
-.button_login {
+.buttonLogin {
     color: #ccdde2ff;
     font-size: 1em;
     font-weight: 500;
@@ -39,7 +39,7 @@
     border-radius: 0.6em;
 }
 
-.button_login:hover {
+.buttonLogin:hover {
     color: var(--primary-hover-color);
     border-color: transparent;
     border: 1px solid var(--primary-hover-color);
@@ -47,7 +47,7 @@
     border-bottom-left-radius: 0.6em;
 }
 
-.button_register {
+.buttonRegister {
     background: var(--primary-color);
     color: white;
     font-size: 1em;
@@ -63,30 +63,32 @@
     border-top-left-radius: 0em;
 }
 
-.button_register:hover {
+.buttonRegister:hover {
     background: var(--primary-hover-color);
     color: var(--white-color);
 }
-.header_dropdown-container {
+.headerDropdownContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 1em;
+    margin-top: 0.3em;
 }
 
 /* NOTIFICATIONS */
 
-.profile_image {
+.profileImage {
     border-radius: var(--border-radius-small);
     width: 2em;
     height: 2em;
     object-fit: cover;
 }
 
-.dropdown_menu.notifications_block_wrap {
+.dropdownMenu.notificationsBlockWrap {
     min-width: 465px;
 }
 
-.notifications_block_wrap small {
+.notificationsBlockWrap small {
     background: var(--custom-btn-bg-color);
     display: block;
     padding: 15px 30px;
@@ -94,21 +96,21 @@
     margin-bottom: 10px;
 }
 
-.notifications_block p {
+.notificationsBlock p {
     font-size: var(--btn-font-size);
     margin-bottom: 0;
 }
 
-.notifications_block span {
+.notificationsBlock span {
     white-space: normal;
 }
 
-.dropdown .notifications_block .dropdown-item:hover {
+.dropdown .notificationsBlock .dropdownItem:hover {
     background: transparent;
     color: var(--dark-color);
 }
 
-.notifications_icon_wrap {
+.notificationsIconWrap {
     background: var(--section-bg-color);
     border-radius: var(--border-radius-medium);
     width: 32px;
@@ -119,7 +121,7 @@
     margin-right: 10px;
 }
 
-.notifications_icon {
+.notificationsIcon {
     font-size: var(--p-font-size);
     color: var(--white-color);
 }
