updated icons dashboard

--- a/src/Components/pages/WelcomePage/Sidebar/sidebar.module.css
+++ b/src/Components/pages/WelcomePage/Sidebar/sidebar.module.css
@@ -36,6 +36,11 @@
     padding: 1em;
 }
 
+.sidebarIcons {
+    width: 30px;
+    padding-right: 0.2em;
+}
+
 .sidebarSticky {
 height: calc(100vh - 58px);
 overflow-x: hidden;
