--- a/src/Components/pages/HomePage/home.module.css
+++ b/src/Components/pages/HomePage/home.module.css
@@ -1,4 +1,4 @@
-.home_container {
+.homeContainer {
     background: linear-gradient(
         to right,
         #b3cde0,
@@ -9,10 +9,10 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 0 5em;
+    padding: 0 1em;
 }
 
-.text_container {
+.textContainer {
     display: flex;
     flex: 1;
     flex-wrap: wrap;
@@ -21,20 +21,20 @@
     height: 0;
 }
 
-.title_container {
+.titleContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.title_container h1 {
+.titleContainer h1 {
     margin: 0;
     padding-bottom: 1em;
     font-size: 2.5em;
 }
 
-.scaling_svg_container {
-    flex: 0 0 320px;
+.scalingSvgContainer {
+    flex: 0 0 350px;
     width: 100%;
     position: relative;
     padding: 0;
@@ -42,7 +42,7 @@
     /* override this inline for aspect ratio other than square */
 }
 
-.scaling_svg {
+.scalingSvg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -50,13 +50,101 @@
     top: 0;
     /* bottom: 1em; */
 }
-
-
-
-.button_container {
+.buttonContainer {
     gap: 1em;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+@media screen and (min-width: 700px) and (max-width: 1100px) {
+    html {
+        font-size: 14px;
+    }
+
+    .homeContainer {
+        align-items: center;
+        justify-content: center;
+        padding: 1em;
+        gap: 0em;
+    }
+
+    .textContainer {
+        flex: auto;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        height: auto;
+        margin: 0 3em;
+    }
+    .textContainer h1 {
+        font-size: 2em;
+    }
+    .scalingSvgContainer {
+        flex: 0 0 550px;
+        width: 100%;
+        position: relative;
+        padding: 0;
+        padding-bottom: 56.92%; /* Aspect ratio 93.52:53.2 */
+        /* override this inline for aspect ratio other than square */
+    }
+
+    .titleContainer {
+        flex: 0 0 max(400px);
+        justify-content: start;
+        gap: 2em;
+    }
+
+    .buttonContainer {
+        gap: 0.5em;
+        margin: 0em;
+        width: 100%;
+        display: flex;
+        justify-content: end;
+    }
+}
+
+@media (min-width: 1100px) {
+    html {
+        font-size: 16px;
+    }
+
+    .homeContainer {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0 5em;
+        gap: 2em;
+    }
+    .titleContainer {
+        justify-content: center;
+    }
+    .scalingSvgContainer {
+        flex: 0 0 900px;
+        width: 100%;
+        position: relative;
+        padding: 0;
+        padding-bottom: 56.92%; /* Aspect ratio 93.52:53.2 */
+        /* override this inline for aspect ratio other than square */
+    }
+    .textContainer {
+        flex: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+    }
+
+    .textContainer h1 {
+        font-size: 2em;
+    }
+
+    .buttonContainer {
+        margin-top: 2em;
+        gap: 1em;
+        width: 100%;
+        display: flex;
+        justify-content: start;
+    }
 }
